<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvFiltarGasolineras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="FILTRAR POR PRECIO MAXIMO"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCombustible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="COMBUSTIBLE"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFiltarGasolineras" />

    <Spinner
        android:id="@+id/spinnerCombustible"
        android:layout_width="174dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvCombustible"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvPrecioMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="PRECIO MAXIMO"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCombustible" />

    <EditText
        android:id="@+id/etPrecioMax"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPrecioMax"
        app:layout_constraintStart_toStartOf="@+id/spinnerCombustible" />

    <Button
        android:id="@+id/btnFiltrar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="FILTRAR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecioMax" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="18dp"
        android:text="CANCELAR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecioMax" />

</androidx.constraintlayout.widget.ConstraintLayout>