...
        android:layout_marginStart="16dp"
        tools:text="Nombre"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        tools:text="Direccion"
        app:layout_constraintBottom_toTopOf="@+id/tv95"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
...
