...
    <TextView
        android:id="@+id/tvPtosInteres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Puntos de interes"
        app:layout_constraintStart_toStartOf="@+id/spinnerPtosInteres"
        app:layout_constraintTop_toBottomOf="@+id/tvOrdenarGasolineras" />

    <Spinner
        android:id="@+id/spinnerPtosInteres"
        android:layout_width="255dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPtosInteres" />

    <Button
        android:id="@+id/btnOrdenar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ORDENAR"
        app:layout_constraintStart_toStartOf="@+id/spinnerPtosInteres"
        app:layout_constraintTop_toTopOf="@+id/btnCancelar" />

...
